# simaticml-decoder

./: .gitignore  .graphifyignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PROJECT_INPUT_CONTRACT.md
docs/superpowers/memory/: artifact-traversal-contract.md  input-boundary-module-card.md  native-handle-traversal-decision.md
docs/superpowers/memory/lessons/: closures-over-open-handles-need-explicit-close.md  platform-gated-module-imported-unconditionally-in-tests.md
docs/superpowers/memory/reports/: 2026-07-13-native-windows-handle-traversal.md
docs/superpowers/plans/: 2026-07-13-fbd-and-advanced-flgnet-qualification.md  2026-07-13-native-windows-handle-traversal.md  2026-07-13-project-scale-simaticml-ingestion.md  2026-07-13-v21-simatic-sd-adapter.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json
scripts/: check_release_version.py
src/simaticml_decoder/: __init__.py  cli.py  emit.py  fold.py  input_policy.py  instructions.py  ir.py  model.py  operand.py  parse.py  project.py  project_discovery.py  project_emit.py  project_index.py  project_model.py  project_xml.py  scl_reconstruct.py  windows_handles.py
tests/: conftest.py  test_cli.py  test_emit.py  test_fixture_corpus.py  test_fixtures_regression.py  test_fold.py  test_input_policy.py  test_operand.py  test_parse.py  test_project_cli.py  test_project_corpus_integrity.py  test_project_discovery.py  test_project_emit.py  test_project_index.py  test_project_model.py  test_project_xml.py  test_quality_configuration.py  test_release_version.py  test_windows_handles.py
tests/fixtures/: InvertBit.xml  SimpleDevice.xml  manifest.json
tests/fixtures/SimaticML/PLC_1/PLC data types/: UDT_ Caja.xml  UDT_Contador.xml  UDT_Settings.xml
tests/fixtures/SimaticML/PLC_1/PLC data types/HMI_COUNTERS_UDTs/: UDT_WORK_CNT.xml
tests/fixtures/SimaticML/PLC_1/PLC tags/: DIAG.xml  Default tag table.xml  Standard-Variablentabelle.xml
tests/fixtures/SimaticML/PLC_1/Program blocks/: DB_Celda.xml  FB_Sensores.xml  FB_Sensores_DB.xml  FC_Cargador.xml  FC_Conveyor_entry.xml  FC_Conveyor_sides.xml  FC_Seguridad.xml  MHJ-PLC-Lab-Function-S71200.xml  Main.xml  SimulationManagement.xml  Simulation_DB.xml
tests/fixtures/SimaticML/PLC_1/Program blocks/100_Inputs/: InputValues_DB.xml  Inputs_FB.xml
tests/fixtures/SimaticML/PLC_1/Program blocks/200_Alarms/: AlarmsContainer.xml  AlarmsLogic_DB.xml  Alarms_DB.xml
tests/fixtures/SimaticML/PLC_1/Program blocks/700_HMI/: HMI_Counters_DB.xml  HMI_DB.xml  HMI_Settings_DB.xml
tests/fixtures/SimaticML/Types/Blocks/: AnalogInput.libint  AnalogInput.xml  deviceState.libint  deviceState.xml
tests/fixtures/SimaticML/Types/UDTs/: AnalogInputSettings.libint  AnalogInputSettings.xml  UDT_Device.libint  UDT_Device.xml
tests/fixtures/SimaticML_synthetic/NonV21/: MissingVersion_FB.xml  UnsupportedVersion_FB.xml
tests/fixtures/SimaticML_synthetic/PLC_1/Program blocks/: AmbiguousTarget.xml  SyntheticCases_FB.xml
tests/fixtures/SimaticML_synthetic/Types/Blocks/: AmbiguousTarget.xml
tests/fixtures/SimaticSD/PLC_1/Program blocks/: FB_Sensores.s7dcl  FB_Sensores_DB.s7dcl  FC_Conveyor_entry.s7dcl  FC_Conveyor_entry.s7res  FC_Conveyor_sides.s7dcl  FC_Conveyor_sides.s7res  Simulation_DB.s7dcl
tests/fixtures/SimaticSD/Types/Blocks/: AnalogInput.s7res  deviceState.libinfo  deviceState.s7dcl
tests/fixtures/SimaticSD/Types/UDTs/: AnalogInputSettings.libinfo  AnalogInputSettings.s7res
tests/fixtures/SimaticSD_s7dcl/PLC_1/PLC data types/: AnalogInputSettings.liblink  UDT_Settings.s7dcl
tests/fixtures/SimaticSD_s7dcl/PLC_1/PLC tags/: Outputs.xml
tests/fixtures/SimaticSD_s7dcl/PLC_1/Program blocks/: DB_Celda.s7dcl  FC_Cargador.s7dcl  FC_Seguridad.s7dcl  Main.s7dcl  SimulationManagement.s7dcl
tests/fixtures/SimaticSD_s7dcl/Types/Blocks/: AnalogInput.libint  AnalogInput.s7dcl  deviceState.libint
tests/fixtures/SimaticSD_s7dcl/Types/UDTs/: AnalogInputSettings.s7dcl  UDT_Device.libinfo  UDT_Device.libint  UDT_Device.s7dcl
tests/fixtures/SimaticSD_s7res/PLC_1/PLC data types/: UDT_ Caja.s7dcl  UDT_Contador.s7dcl
tests/fixtures/SimaticSD_s7res/PLC_1/PLC tags/: Inputs.xml
tests/fixtures/SimaticSD_s7res/PLC_1/Program blocks/: FB_Sensores.s7res  FC_Cargador.s7res  FC_Seguridad.s7res  MHJ-PLC-Lab-Function-S71200.s7dcl  Main.s7res
tests/fixtures/SimaticSD_s7res/Types/Blocks/: AnalogInput.libinfo  deviceState.s7res
tests/fixtures/SimaticSD_s7res/Types/UDTs/: AnalogInputSettings.libint  UDT_Device.s7res
tests/fixtures/golden/diagnostics/: sd-code-only.json  sd-unpaired-resource.json  simaticml-udt.json
tests/fixtures/golden/simaticml/: fc_cargador.ir.json  fc_cargador.scl  fc_cargador.sidecar.json  inputs_fb.checksums.json
tests/golden/: v21_project_manifest.json
(+23 files in other folders)
